other/a/add-imagepullsecrets/.kyverno-test/patchedResource1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-1
spec:
  containers:
  - name: nginx
    image: corp.reg.com/nginx:latest
  imagePullSecrets:
  - name: my-secret
