other/a/add-imagepullsecrets/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-1
spec:
  containers:
  - name: nginx
    image: corp.reg.com/nginx:latest

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-2
spec:
  containers:
  - name: nginx
    image: nginx:latest

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-3
spec:
  containers:
  - name: nginx
    image: corp.reg.com/nginx:latest
  imagePullSecrets:
  - name: my-secret
