other/a/add-imagepullsecrets/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-imagepullsecrets
policies:
- ../add-imagepullsecrets.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResource: patchedResource1.yaml
  policy: add-imagepullsecrets
  resources:
  - myapp-pod-1
  result: pass
  rule: add-imagepullsecret
- kind: Pod
  patchedResource: patchedResource2.yaml
  policy: add-imagepullsecrets
  resources:
  - myapp-pod-2
  result: skip
  rule: add-imagepullsecret
- kind: Pod
  patchedResource: patchedResource3.yaml
  policy: add-imagepullsecrets
  resources:
  - myapp-pod-3
  result: skip
  rule: add-imagepullsecret
